@@ -1,4 +1,4 @@
-2026-01-09 GarlicDude <https://www.github.com/thatgarlicdude>
+2026-01-10 GarlicDude <https://www.github.com/thatgarlicdude>
 
 	PacIO Version 1.6.0-alpha
 	* Added the docs directory.
@@ -28,6 +28,10 @@
 		* The Javadoc now uses paragraphs.
 	* Updated Loadable.java.
 		* The Javadoc now uses paragraphs.
+		* The methods are now simply default methods and no longer
+		public static, as it's redundant.
+		* Elaborated the Javadoc comments for the interface and its
+		methods.
 		* Changed load() to open().
 		* Changed unload() to close().
 	* Updated Savable.java.
